Continuing Chapter 2 Notes - Persistence

--- a/Notes/Code/Makefile
+++ b/Notes/Code/Makefile
@@ -4,3 +4,6 @@ BIN_DIR=bin
 
 cpu2:
 	$(CC) $(CFLAGS) ./01.Intro/cpu2.c -o $(BIN_DIR)/cpu2
+
+io2:
+	$(CC) $(CFLAGS) ./01.Intro/io2.c -o $(BIN_DIR)/io2
